--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ else()
 
 endif()
 
-target_sources("${CMAKE_PROJECT_NAME}" PRIVATE ${MY_SOURCES}  "include/Goomba.h" "include/Koopa.h" "include/Bullet.h" "include/PiranhaPlant.h" "src/Goomba.cpp" "src/Koopa.cpp" "src/Bullet.cpp" "src/PiranhaPlant.cpp")
+target_sources("${CMAKE_PROJECT_NAME}" PRIVATE ${MY_SOURCES}  "include/Goomba.h" "include/Koopa.h" "include/Bullet.h" "include/PiranhaPlant.h" "src/Goomba.cpp" "src/Koopa.cpp" "src/Bullet.cpp" "src/PiranhaPlant.cpp" "include/Rex.h" "src/Rex.cpp")
 
 
 if(MSVC) # If using the VS compiler...
